--- a/HeatRunAnalysisTool/Form1.resx
+++ b/HeatRunAnalysisTool/Form1.resx
@@ -117,63 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="menuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>247, 17</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABEAAAARCAYAAAA7bUf6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAC5SURBVDhPrZPB
-        GYMgDEYdwRE6giN48d4RGMEROkpH6LFHR3AERnCDmL8foVGiiHp4ByC8EAgVESX4b1czjnkpeqax4pOJ
-        sGFiaIOBWcj0ZmQfQ2AOJHGWBBmsDXu0UcID1GsF5fBa4leLJTgI2tVkKZ8rpQgeEjyptXiYOyTTHXcy
-        yOvsdWiOXiRnS0LyWiQlLa95xmYLooYpabr07wQRTvRWgRZI9DuBsJAIHPRgcE/4lALkMfsfqmaYYShx
-        m26qEQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="pictureBox1.ErrorImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACcAAAAnCAYAAACMo1E1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAGeSURBVFhH7ZhL
-        ecMwEIQDIRACwRB66b0QCsEQCiEQDCHHHgOhEAwhDNyZfFI+WZ64sqPHHnr4D16vVqPnSjpM07Sb8fu9
-        A5/g6wlv4KjKpiCNa7gKB3ADUyJXwEZsEiqNChd8BKryVNgg9miSSGkMQaATYMtVZXuhyA9VX4g0ehjA
-        BVIV5GBQ9XqkkaAgh1EFzM0PkMO8MBA41xLmkQJnHwROHEoVoDSLIZ59wIGTv+Qc+4s+1BOLu0TOtWHH
-        nBbiYOTmqgrU5jG8objce9kr3HvPC2OOVE6tOIfiztHP1oyhOO4zyqklHYUdI6MVeoqzskpjBoqrnapS
-        uVIcz1fqZ2v+xe3lLs70nDO9Wu3ucy5DvHqrKkFnNbfewtxq91TiBNo8zzlxdk/CTmDr3tN3CCfO7u2L
-        wKFVxrjEWmYfHjj2UcHSpN34PXCudSDY9lbiQSEOcdFXJvD0rU4aQ1CYG3TuCxAbPJv8CmlUIBh7MUcO
-        Xu2tEGlcA4EpcuubCnueiyxJlEcaU0FlzCpcOIQbuIcHCdr4nPbYVLcxHX4BQnfoZendhzQAAAAASUVO
-        RK5CYII=
-</value>
-  </data>
-  <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACcAAAAnCAYAAACMo1E1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAGeSURBVFhH7ZhL
-        ecMwEIQDIRACwRB66b0QCsEQCiEQDCHHHgOhEAwhDNyZfFI+WZ64sqPHHnr4D16vVqPnSjpM07Sb8fu9
-        A5/g6wlv4KjKpiCNa7gKB3ADUyJXwEZsEiqNChd8BKryVNgg9miSSGkMQaATYMtVZXuhyA9VX4g0ehjA
-        BVIV5GBQ9XqkkaAgh1EFzM0PkMO8MBA41xLmkQJnHwROHEoVoDSLIZ59wIGTv+Qc+4s+1BOLu0TOtWHH
-        nBbiYOTmqgrU5jG8objce9kr3HvPC2OOVE6tOIfiztHP1oyhOO4zyqklHYUdI6MVeoqzskpjBoqrnapS
-        uVIcz1fqZ2v+xe3lLs70nDO9Wu3ucy5DvHqrKkFnNbfewtxq91TiBNo8zzlxdk/CTmDr3tN3CCfO7u2L
-        wKFVxrjEWmYfHjj2UcHSpN34PXCudSDY9lbiQSEOcdFXJvD0rU4aQ1CYG3TuCxAbPJv8CmlUIBh7MUcO
-        Xu2tEGlcA4EpcuubCnueiyxJlEcaU0FlzCpcOIQbuIcHCdr4nPbYVLcxHX4BQnfoZendhzQAAAAASUVO
-        RK5CYII=
-</value>
-  </data>
-  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>362, 17</value>
-  </metadata>
-  <data name="pictureBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAiMAAAAYCAYAAAAoCP32AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DQAACw0B7QfALAAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAE7SURBVHhe7d3L
-        TcNAFAVQSqCEdBBKoARKoARKiUQDlMCKtUugBEqgA3NHSBCMccafMZuzOJLjefOyvYp0lau+7zfz8ni8
-        iQ4AoNJpNFQskWWHeI8eAKBSNxos5sqi63g9WwwAUGOzMFJ+Zhn7AgCAKevDSJY8DZYCANRaF0ay4H6w
-        EABgjuVhJJdvB8sAAOZaFkZysVR4NWcAgLXmh5FcKs2Zt7MlAABLLQojKrwAwFbmhZFc0JwBALZUH0Yy
-        /DC4DACwVl0YyaAKLwDQwuUwkiHNGQCglekwkoHSnBFEAIBW/g4jOfTndwBAa5NhRHMGAGhtPIzk4DQY
-        BABo4XcYyUvNGQBgLz/DSF6U5szYIABAC99hJB8OoTkDAOzpM4zkQXMGAPgPX2HkeXAAALCHrgSRu/IA
-        ALC/4+kDB9jFgNMvFFYAAAAASUVORK5CYII=
-</value>
-  </data>
   <metadata name="Info.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>477, 17</value>
   </metadata>
@@ -205,6 +148,66 @@
     <value>True</value>
   </metadata>
   <metadata name="dataGridViewTextBoxColumn10.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn10.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn11.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn12.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn13.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn14.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn15.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn16.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn17.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn18.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn19.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn20.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="dataGridViewTextBoxColumn11.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -267,6 +270,36 @@
   <metadata name="dataGridViewTextBoxColumn30.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="dataGridViewTextBoxColumn21.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn22.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn23.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn24.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn25.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn26.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn27.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn28.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn29.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn30.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="Hour.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -296,6 +329,93 @@
   </metadata>
   <metadata name="CumAgeHr.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
+  </metadata>
+  <metadata name="Hour.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Load.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="AmbientTemp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TopOilTemp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="HotSpotTemp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="HottestSptTemp.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Tau.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Faa.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="AgingHr.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="CumAgeHr.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAiMAAAAYCAYAAAAoCP32AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DQAACw0B7QfALAAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAE7SURBVHhe7d3L
+        TcNAFAVQSqCEdBBKoARKoARKiUQDlMCKtUugBEqgA3NHSBCMccafMZuzOJLjefOyvYp0lau+7zfz8ni8
+        iQ4AoNJpNFQskWWHeI8eAKBSNxos5sqi63g9WwwAUGOzMFJ+Zhn7AgCAKevDSJY8DZYCANRaF0ay4H6w
+        EABgjuVhJJdvB8sAAOZaFkZysVR4NWcAgLXmh5FcKs2Zt7MlAABLLQojKrwAwFbmhZFc0JwBALZUH0Yy
+        /DC4DACwVl0YyaAKLwDQwuUwkiHNGQCglekwkoHSnBFEAIBW/g4jOfTndwBAa5NhRHMGAGhtPIzk4DQY
+        BABo4XcYyUvNGQBgLz/DSF6U5szYIABAC99hJB8OoTkDAOzpM4zkQXMGAPgPX2HkeXAAALCHrgSRu/IA
+        ALC/4+kDB9jFgNMvFFYAAAAASUVORK5CYII=
+</value>
+  </data>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>362, 17</value>
+  </metadata>
+  <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABEAAAARCAYAAAA7bUf6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAC5SURBVDhPrZPB
+        GYMgDEYdwRE6giN48d4RGMEROkpH6LFHR3AERnCDmL8foVGiiHp4ByC8EAgVESX4b1czjnkpeqax4pOJ
+        sGFiaIOBWcj0ZmQfQ2AOJHGWBBmsDXu0UcID1GsF5fBa4leLJTgI2tVkKZ8rpQgeEjyptXiYOyTTHXcy
+        yOvsdWiOXiRnS0LyWiQlLa95xmYLooYpabr07wQRTvRWgRZI9DuBsJAIHPRgcE/4lALkMfsfqmaYYShx
+        m26qEQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox1.ErrorImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACcAAAAnCAYAAACMo1E1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DgAACw4BQL7hQQAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAGeSURBVFhH7ZhL
+        ecMwEIQDIRACwRB66b0QCsEQCiEQDCHHHgOhEAwhDNyZfFI+WZ64sqPHHnr4D16vVqPnSjpM07Sb8fu9
+        A5/g6wlv4KjKpiCNa7gKB3ADUyJXwEZsEiqNChd8BKryVNgg9miSSGkMQaATYMtVZXuhyA9VX4g0ehjA
+        BVIV5GBQ9XqkkaAgh1EFzM0PkMO8MBA41xLmkQJnHwROHEoVoDSLIZ59wIGTv+Qc+4s+1BOLu0TOtWHH
+        nBbiYOTmqgrU5jG8objce9kr3HvPC2OOVE6tOIfiztHP1oyhOO4zyqklHYUdI6MVeoqzskpjBoqrnapS
+        uVIcz1fqZ2v+xe3lLs70nDO9Wu3ucy5DvHqrKkFnNbfewtxq91TiBNo8zzlxdk/CTmDr3tN3CCfO7u2L
+        wKFVxrjEWmYfHjj2UcHSpN34PXCudSDY9lbiQSEOcdFXJvD0rU4aQ1CYG3TuCxAbPJv8CmlUIBh7MUcO
+        Xu2tEGlcA4EpcuubCnueiyxJlEcaU0FlzCpcOIQbuIcHCdr4nPbYVLcxHX4BQnfoZendhzQAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACcAAAAnCAYAAACMo1E1AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DgAACw4BQL7hQQAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAGeSURBVFhH7ZhL
+        ecMwEIQDIRACwRB66b0QCsEQCiEQDCHHHgOhEAwhDNyZfFI+WZ64sqPHHnr4D16vVqPnSjpM07Sb8fu9
+        A5/g6wlv4KjKpiCNa7gKB3ADUyJXwEZsEiqNChd8BKryVNgg9miSSGkMQaATYMtVZXuhyA9VX4g0ehjA
+        BVIV5GBQ9XqkkaAgh1EFzM0PkMO8MBA41xLmkQJnHwROHEoVoDSLIZ59wIGTv+Qc+4s+1BOLu0TOtWHH
+        nBbiYOTmqgrU5jG8objce9kr3HvPC2OOVE6tOIfiztHP1oyhOO4zyqklHYUdI6MVeoqzskpjBoqrnapS
+        uVIcz1fqZ2v+xe3lLs70nDO9Wu3ucy5DvHqrKkFnNbfewtxq91TiBNo8zzlxdk/CTmDr3tN3CCfO7u2L
+        wKFVxrjEWmYfHjj2UcHSpN34PXCudSDY9lbiQSEOcdFXJvD0rU4aQ1CYG3TuCxAbPJv8CmlUIBh7MUcO
+        Xu2tEGlcA4EpcuubCnueiyxJlEcaU0FlzCpcOIQbuIcHCdr4nPbYVLcxHX4BQnfoZendhzQAAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <metadata name="menuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>247, 17</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
